bpo-42866: Fix refleak in CJK getcodec() (GH-24165)

Fix a reference leak in the getcodec() function of CJK codecs.
(cherry picked from commit e542d417b96077d04aec089505eacb990c9799ae)

Co-authored-by: Victor Stinner <vstinner@python.org>